force-app/main/default/objects/lwapic__Integration_Log__c/lwapic__Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>IL-{YYMMDD}-{0}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>