force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Endpoint_URL__c</fullName>
    <description>Endpoint URL</description>
    <inlineHelpText>Endpoint URL</inlineHelpText>
    <label>Endpoint URL</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>