force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Integration_Channel__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Integration_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Integration Channel</description>
    <inlineHelpText>Integration Channel</inlineHelpText>
    <label>Integration Channel</label>
    <referenceTo>lwapic__Integration_Channel__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>