force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__JobId__c.field-meta.xml
<CustomField>
    <fullName>lwapic__JobId__c</fullName>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>