force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Log__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>