force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Object_Name__c</fullName>
    <description>Object Name</description>
    <inlineHelpText>Object Name</inlineHelpText>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>