force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__RecordId__c.field-meta.xml
<CustomField>
    <fullName>lwapic__RecordId__c</fullName>
    <description>RecordId</description>
    <inlineHelpText>RecordId</inlineHelpText>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>