force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Related_Record__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Related_Record__c</fullName>
    <description>Related Record</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; lwapic__RecordId__c, &quot;Link to record&quot;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click to view the related record.</inlineHelpText>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>