force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Request_Data__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Data__c</fullName>
    <description>Request Data</description>
    <inlineHelpText>Request Data</inlineHelpText>
    <label>Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>