force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Request_Header__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Header__c</fullName>
    <description>Request Header</description>
    <inlineHelpText>Request Header</inlineHelpText>
    <label>Request Header</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>