force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Response_Data__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Response_Data__c</fullName>
    <description>Response Data</description>
    <inlineHelpText>Response Data</inlineHelpText>
    <label>Response Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>