force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Response_Header__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Response_Header__c</fullName>
    <description>Response Header</description>
    <inlineHelpText>Response Header</inlineHelpText>
    <label>Response Header</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>