force-app/main/default/objects/lwapic__Integration_Log__c/fields/lwapic__Status__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Status__c</fullName>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>