force-app/main/default/objects/lwapic__Integration_Log__c/listViews/lwapic__All.listView-meta.xml
<ListView>
    <fullName>lwapic__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>